# chesscog

./: pyproject.toml
chesscog/occupancy_classifier/: create_dataset.py
chesscog/piece_classifier/: create_dataset.py
chesscog/recognition/: recognition.py
