[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chesscog"
version = "1.0.1"
description = "Recognise chess positions using computer vision."
requires-python = ">=3.8,<3.11"
authors = [
  { name = "Georg Wölflein", email = "georgw7777@gmail.com" }
]
dependencies = [
  "opencv-python>=4.5.3,<5",
  "numpy>=1.21.2,<2",
  "Pillow>=8.3.1,<9",
  "matplotlib>=3.4.3,<4",
  "torch>=1.9.1,<2",
  "torchvision>=0.10.0,<0.11",
  "tensorboard>=2.6.0,<3",
  "pandas>=1.3.2,<2",
  "scikit-learn>=0.24.2,<0.25",
  "tqdm>=4.62.2,<5",
  "googledrivedownloader>=0.4,<0.5",
  "recap>=0.1.6,<0.2",
  "chess>=1.6.1,<2",
  "osfclient>=0.0.5,<0.0.6",
  "setuptools==59.5.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=4.1.2,<5",
  "sphinx-rtd-theme>=0.5.2,<0.6",
  "m2r2>=0.3.1,<0.4",
]

[dependency-groups]
dev = [
  "jupyterlab>=2.2.8,<3",
  "autopep8>=1.5.4,<2",
  "pylint>=2.6.0,<3",
  "pytest>=6.1.1,<7",
  "toml>=0.10.2,<0.11",
  "pdoc3>=0.9.2,<0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["chesscog"]

[tool.hatch.build]
include = [
  "config/*.yaml",
  "config/**/_*.yaml",
]